Anonymous | Login | 2021-01-17 19:22 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0031977 | Community | [OCCT] OCCT:Modeling Algorithms | public | 2020-12-04 09:24 | 2020-12-12 13:46 | ||||||||
Reporter | abv | ||||||||||||
Assigned To | bugmaster | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | verified | Resolution | fixed | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | |||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0031977: Modeling Algorithms - useless static variable in BRepFill_OffsetWire::Init() preventing its parallel usage | ||||||||||||
Description | The problem is reported by EugeneZ at https://dev.opencascade.org/index.php?q=node/1313 [^] Looks like bug in BRepFill_OffsetWire: static BRepMAT2d_Explorer Exp; Exp.Perform(mySpine); The "static" doesn't allow to use it in parallel threads. | ||||||||||||
Steps To Reproduce | N/A | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | Not required | ||||||||||||
Attached Files | |||||||||||||
![]() |
|||||||||||||
|
![]() |
|
(0097399) git (administrator) 2020-12-06 19:20 |
Branch CR31977 has been created by abv. SHA-1: dc26c63ecac503b527d44f9783c8153ee3fdd33d Detailed log of new commits: Author: abv Date: Sun Dec 6 19:20:47 2020 +0300 0031977: Modeling Algorithms - useless static variable in BRepFill_OffsetWire::Init() preventing its parallel usage Removed useless "static" before local variable and some commented code |
(0097400) abv (manager) 2020-12-06 22:19 |
Fix pushed to branch CR31977, please review. Jenkins tests are OK, see job CR31977-abv |
(0097405) msv (developer) 2020-12-07 09:59 |
For integration: occt - CR31977 products - none |
(0097519) bugmaster (administrator) 2020-12-12 12:55 |
Combination - OCCT branch : IR-2020-12-11 master SHA - a25d5aaa30ec81c1fb94a9a394b8afa740611203 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-12-11 SHA - 32a7f74b10f27f9251808f20fdfe1444ff30c60b was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17756.510000000126 / 18090.92999999998 [-1.85%] Products Total CPU difference: 12330.210000000125 / 12342.950000000128 [-0.10%] Windows-64-VC14: OCCT Total CPU difference: 19429.09375 / 19751.71875 [-1.63%] Products Total CPU difference: 13755.5 / 13772.515625 [-0.12%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0097536) git (administrator) 2020-12-12 13:46 |
Branch CR31977 has been deleted by inv. SHA-1: dc26c63ecac503b527d44f9783c8153ee3fdd33d |
![]() |
|||
occt: master 954caad0
Timestamp: 2020-12-06 16:20:47 Author: abv Committer: bugmaster [ Details ] [ Diff ] |
0031977: Modeling Algorithms - useless static variable in BRepFill_OffsetWire::Init() preventing its parallel usage Removed useless "static" before local variable and some commented code |
||
mod - src/BRepFill/BRepFill_OffsetWire.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2020-12-04 09:24 | abv | New Issue | |
2020-12-04 09:24 | abv | Assigned To | => msv |
2020-12-06 18:02 | kgv | Description Updated | View Revisions |
2020-12-06 18:04 | kgv | Relationship added | duplicate of 0030585 |
2020-12-06 18:05 | kgv | Relationship added | related to 0030584 |
2020-12-06 19:16 | abv | Summary | Modeling Algorithms - useless static variable in BRepFill_OffsetWire::Init() preventing is parallel usage => Modeling Algorithms - useless static variable in BRepFill_OffsetWire::Init() preventing its parallel usage |
2020-12-06 19:20 | git | Note Added: 0097399 | |
2020-12-06 22:19 | abv | Note Added: 0097400 | |
2020-12-06 22:19 | abv | Status | new => resolved |
2020-12-07 09:59 | msv | Note Added: 0097405 | |
2020-12-07 09:59 | msv | Assigned To | msv => bugmaster |
2020-12-07 09:59 | msv | Status | resolved => reviewed |
2020-12-12 12:55 | bugmaster | Note Added: 0097519 | |
2020-12-12 12:55 | bugmaster | Status | reviewed => tested |
2020-12-12 12:57 | bugmaster | Test case number | => Not required |
2020-12-12 13:13 | bugmaster | Changeset attached | => occt master 954caad0 |
2020-12-12 13:13 | bugmaster | Status | tested => verified |
2020-12-12 13:13 | bugmaster | Resolution | open => fixed |
2020-12-12 13:46 | git | Note Added: 0097536 |
Copyright © 2000 - 2021 MantisBT Team |